--- a/Brandon/index.html
+++ b/Brandon/index.html
@@ -5,14 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tanzidur Rahman">
-    <title>Document</title>
+    <title>Brandon</title>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&family=Poppins:wght@400;500;800;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">   
 </head>
 <body>
+    <header>
+        <div class="container py-4">
+            <div class="row align-items-center">
+                <div class="col-lg-3 col-md-3 col-sm-3">
+                    <img src="assets/images/logo.png" alt="logo" class="img-fluid">
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-9">
+                    <div class="header-menu text-end">
+                        <a href="#" class="text-decoration-none text-dark fs-4 fw-bold px-2 pe-5">LOGIN</a>
+                        <a class="" data-bs-toggle="offcanvas" href="#offcanvasBrandon" role="button" aria-controls="offcanvasBrandon">
+                            <img src="assets/images/menu_icon.png" alt="menu" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="caroBrandon" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+        </div>
 
-    
+        <div class="carousel-items py-5 my-5 position-relative">
+            <div class="container">
+                <div class="row pt-4 mt-5 align-items-center">
+                  <div class="col-sm 12 col-md-4 col-lg-4">
+                      <h1 class="fw-bold text-uppercase display-1">skating</h1>
+                  </div>
+                  <div class="col-sm 12 col-md-4 col-lg-4 skate">
+                      <img src="assets/images/ima.png" alt="ima" class="position-absolute">
+                  </div>
+                  <div class="col-sm 12 col-md-4 col-lg-4">
+                      <h1 class="fw-bold text-uppercase display-1">board</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="container pb-5 mb-5">
+                  <div class="row align-items-center pt-3">
+                    <div class="col-sm-12 col-md-5 col-lg-5">
+                        <p class="fw-bold py-5">It is a long established fact that a reader will be
+                          distracted by the readable content of a page when
+                          looking at its</p>
+                      <a class="btn rounded-pill btn-outline-danger text-dark px-5 py-3" href="https://www.free-css.com/free-css-templates">Read More</a>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+    </header>
+
+    <!-- Offcanvas Start  -->
+    <div class="offcanvas offcanvas-start border-0 text-light" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasBrandon" aria-labelledby="offcanvasBrandon">
+        <div class="offcanvas-header ms-auto py-0">
+          <a class="btn text-light fs-4" data-bs-dismiss="offcanvas" aria-label="Close">X</a>
+        </div>
+        <div class="offcanvas-body">
+            <nav class="navbar">
+                <ul class="navbar-nav ms-3">
+                    <li class="nav-item"><a href="#" class="nav-link">
+                        Home
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">
+                        About
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">
+                        Classes
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">
+                        Testimonial
+                    </a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">
+                        Contact
+                    </a></li>
+                </ul>
+            </nav>
+        </div>
+      </div>
+    <!-- Offcanvas End -->
+
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
