--- a/Brandon/index.html
+++ b/Brandon/index.html
@@ -34,21 +34,21 @@
                     <div class="container-fluid px-3 mx-5 py-3 my-3">
                         <div class="container">
                             <div class="row pt-4 mt-5 align-items-center">
-                              <div class="col-sm-12 col-md-5 col-lg-5">
-                                  <h1 class="fw-bold text-uppercase display-1">skating</h1>
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-1 order-md-1 order=lg-1">
+                                    <h1 class="pt-lg-5 fw-bold text-uppercase display-1">skating</h1>
+                                </div>
+                                <div class="col-sm-12 col-md-2 col-lg-2 skate order-sm-3 order-md-2 order=lg-3">
+                                    <img src="assets/images/ima.png" alt="ima" class="position-absolute">
+                                </div>
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-2 order-md-3 order=lg-2">
+                                    <h1 class="fw-bold text-uppercase display-1">board</h1>
+                                </div>
                               </div>
-                              <div class="col-sm-12 col-md-2 col-lg-2 skate">
-                                  <img src="assets/images/ima.png" alt="ima" class="position-absolute">
-                              </div>
-                              <div class="col-sm-12 col-md-5 col-lg-5">
-                                  <h1 class="fw-bold text-uppercase display-1">board</h1>
-                              </div>
-                            </div>
                         </div>
                         <div class="container pb-5 mb-5">
                               <div class="row align-items-center pt-3">
                                 <div class="col-sm-12 col-md-5 col-lg-5">
-                                    <p class="fw-bold py-5">It is a long established fact that a reader will be
+                                    <p class="py-md-4 py-lg-5 pe-lg-5 fs-5">It is a long established fact that a reader will be
                                       distracted by the readable content of a page when
                                       looking at its</p>
                                   <a class="btn rounded-pill btn-outline-danger text-dark px-5 py-3" href="https://www.free-css.com/free-css-templates">Read More</a>
@@ -62,21 +62,21 @@
                     <div class="container-fluid px-3 mx-5 py-3 my-3">
                         <div class="container">
                             <div class="row pt-4 mt-5 align-items-center">
-                                <div class="col-sm-12 col-md-5 col-lg-5">
-                                    <h1 class="fw-bold text-uppercase display-1">skating</h1>
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-1 order-md-1 order=lg-1">
+                                    <h1 class="pt-lg-5 fw-bold text-uppercase display-1">skating</h1>
                                 </div>
-                                <div class="col-sm-12 col-md-2 col-lg-2 skate">
+                                <div class="col-sm-12 col-md-2 col-lg-2 skate order-sm-3 order-md-2 order=lg-3">
                                     <img src="assets/images/ima.png" alt="ima" class="position-absolute">
                                 </div>
-                                <div class="col-sm-12 col-md-5 col-lg-5">
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-2 order-md-3 order=lg-2">
                                     <h1 class="fw-bold text-uppercase display-1">board</h1>
                                 </div>
-                            </div>
+                              </div>
                         </div>
                         <div class="container pb-5 mb-5">
                                 <div class="row align-items-center pt-3">
                                 <div class="col-sm-12 col-md-5 col-lg-5">
-                                    <p class="fw-bold py-5">It is a long established fact that a reader will be
+                                    <p class="py-md-4 py-lg-5 pe-lg-5 fs-5">It is a long established fact that a reader will be
                                         distracted by the readable content of a page when
                                         looking at its</p>
                                     <a class="btn rounded-pill btn-outline-danger text-dark px-5 py-3" href="https://www.free-css.com/free-css-templates">Read More</a>
@@ -90,21 +90,21 @@
                     <div class="container-fluid px-3 mx-5 py-3 my-3">
                         <div class="container">
                             <div class="row pt-4 mt-5 align-items-center">
-                                <div class="col-sm-12 col-md-5 col-lg-5">
-                                    <h1 class="fw-bold text-uppercase display-1">skating</h1>
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-1 order-md-1 order=lg-1">
+                                    <h1 class="pt-lg-5 fw-bold text-uppercase display-1">skating</h1>
                                 </div>
-                                <div class="col-sm-12 col-md-2 col-lg-2 skate">
+                                <div class="col-sm-12 col-md-2 col-lg-2 skate order-sm-3 order-md-2 order=lg-3">
                                     <img src="assets/images/ima.png" alt="ima" class="position-absolute">
                                 </div>
-                                <div class="col-sm-12 col-md-5 col-lg-5">
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-2 order-md-3 order=lg-2">
                                     <h1 class="fw-bold text-uppercase display-1">board</h1>
                                 </div>
-                            </div>
+                              </div>
                         </div>
                         <div class="container pb-5 mb-5">
                                 <div class="row align-items-center pt-3">
                                 <div class="col-sm-12 col-md-5 col-lg-5">
-                                    <p class="fw-bold py-5">It is a long established fact that a reader will be
+                                    <p class="py-md-4 py-lg-5 pe-lg-5 fs-5">It is a long established fact that a reader will be
                                         distracted by the readable content of a page when
                                         looking at its</p>
                                     <a class="btn rounded-pill btn-outline-danger text-dark px-5 py-3" href="https://www.free-css.com/free-css-templates">Read More</a>
@@ -118,21 +118,21 @@
                     <div class="container-fluid px-3 mx-5 py-3 my-3">
                         <div class="container">
                             <div class="row pt-4 mt-5 align-items-center">
-                                <div class="col-sm-12 col-md-5 col-lg-5">
-                                    <h1 class="fw-bold text-uppercase display-1">skating</h1>
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-1 order-md-1 order=lg-1">
+                                    <h1 class="pt-lg-5 fw-bold text-uppercase display-1">skating</h1>
                                 </div>
-                                <div class="col-sm-12 col-md-2 col-lg-2 skate">
+                                <div class="col-sm-12 col-md-2 col-lg-2 skate order-sm-3 order-md-2 order=lg-3">
                                     <img src="assets/images/ima.png" alt="ima" class="position-absolute">
                                 </div>
-                                <div class="col-sm-12 col-md-5 col-lg-5">
+                                <div class="col-sm-12 col-md-5 col-lg-12 order-sm-2 order-md-3 order=lg-2">
                                     <h1 class="fw-bold text-uppercase display-1">board</h1>
                                 </div>
-                            </div>
+                              </div>
                         </div>
                         <div class="container pb-5 mb-5">
                                 <div class="row align-items-center pt-3">
                                 <div class="col-sm-12 col-md-5 col-lg-5">
-                                    <p class="fw-bold py-5">It is a long established fact that a reader will be
+                                    <p class="py-md-4 py-lg-5 pe-lg-5 fs-5">It is a long established fact that a reader will be
                                         distracted by the readable content of a page when
                                         looking at its</p>
                                     <a class="btn rounded-pill btn-outline-danger text-dark px-5 py-3" href="https://www.free-css.com/free-css-templates">Read More</a>
@@ -164,19 +164,19 @@
         <div class="offcanvas-body">
             <nav class="navbar">
                 <ul class="navbar-nav ms-3">
-                    <li class="nav-item"><a href="#" class="nav-link">
+                    <li class="nav-item"><a href="https://www.free-css.com/" class="nav-link">
                         Home
                     </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">
+                    <li class="nav-item"><a href="assets/pages/about.html" class="nav-link">
                         About
                     </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">
+                    <li class="nav-item"><a href="assets/pages/classes.html" class="nav-link">
                         Classes
                     </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">
+                    <li class="nav-item"><a href="assets/pages/testimonials.html" class="nav-link">
                         Testimonial
                     </a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">
+                    <li class="nav-item"><a href="assets/pages/contact.html" class="nav-link">
                         Contact
                     </a></li>
                 </ul>
