--- a/Brandon/assets/pages/testimonial.html
+++ b/Brandon/assets/pages/testimonial.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Tanzidur Rahman">
-    <title>Brandon Contact</title>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&family=Poppins:wght@400;500;800;900&display=swap" rel="stylesheet">`
+    <title>Braondon Testimonials</title>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@500&family=Poppins:wght@400;500;800;900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/style.css">   
@@ -61,38 +61,61 @@
         <!-- Offcanvas End -->    
 </section>
 
- <!--Contact Part Start-->
-  <main class="contact position-relative contact pb-4">
-    <h2 class="py-3 my-4 text-center fw-bold display-4 bg-danger text-white text-uppercase">contact us</h2>
-   <img src="../images/clip.png" alt="clip" class="position-absolute clip">
-   <div class="container py-5">
-         <div class="row justify-content-center align-content-center">
-           <div class="col-md-10 col-lg-10 col-sm-12 px-5">
-                <form action="">
-                    <div class="mb-3">
-                        <input type="text" class="form-control" id="name" placeholder="Name">
-                    </div>
-                    <div class="mb-3">
-                        <input type="tel" class="form-control" id="tel" placeholder="Phone Number">
-                    </div>
-                    <div class="mb-3">
-                        <input type="email" class="form-control" id="email" placeholder="Email">
-                    </div>
-                    <div class="mb-3">
-                        <input type="text" class="form-control pt-5 message" id="message" placeholder="Message">
-                    </div>
+<main class="testimonials position-relative py-3">
+    <h2 class="fw-bold text-center display-4 py-3 my-4 bg-danger text-uppercase text-white">Testimonials</h2>
+    <img src="../images/clip.png" alt="clip" class="position-absolute clip">
+    <div class="container">
+        <div class="backgroundImage">
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- Carousel -->
+                <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-                    <div class="col-md-10 col-lg-10 col-sm-12 px-5 mt-5 mx-auto">
-                        <a class="btn text-light text-decoration-none d-block py-2 text-center fs-1  border-0 rounded-3" type="submit">SEND</a>
+                    <!-- Indicators/dots -->
+                    <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active py-1 px-2 bg-dark border"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="1" class="py-1 px-2 bg-dark border"></button>
+                    <button type="button" data-bs-target="#demo" data-bs-slide-to="2" class="py-1 px-2 bg-dark border"></button>
                     </div>
-                </form>
+                    <!-- The slideshow/carousel -->
+                    <div class="carousel-inner text-center py-5 px-4">
+                    <div class="carousel-item active">
+                        <h4 class="fw-bold pb-5"><span class="markden">MARKDEN</span></h4>
+                        <p>
+                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationipsum 
+                            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        </p>
+                    </div>
+                    <div class="carousel-item">
+                        <h4 class="fw-bold pb-5"><span class="markden">MARKDEN</span></h4>
+                        <p>
+                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationipsum 
+                            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        </p>
+                    </div>
+                    <div class="carousel-item">       
+                        <h4 class="fw-bold pb-5"><span class="markden">MARKDEN</span></h4>
+                        <p>
+                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationipsum 
+                            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        </p>
+                    </div>
+                    </div>
+                </div>
+
+                </div>
             </div>
-          </div>
-       </div>
-    </main>
-<!--Contact Part End-->
+        </div>
+    </div>
+</main>
 
-
+    
 <!-- footer Start -->
     <footer class="py-5 mt-5">
         <div class="container">
