--- a/Brandon/assets/pages/classes.html
+++ b/Brandon/assets/pages/classes.html
@@ -14,7 +14,7 @@
 <body>
     <!-- logo and Login Start -->
     <section>
-        <div class="container py-4">
+        <div class="container pb-4">
             <div class="row align-items-center">
                 <div class="col-lg-3 col-md-3 col-sm-3">
                     <img src="../images/logo.png" alt="logo" class="img-fluid">
@@ -65,7 +65,7 @@
          <!--classesPart Start-->
          <main class="position-relative classes pb-4">
             <img src="../images/clip.png" alt="clip" class="position-absolute clip">
-            <h2 class="py-2 my-3 text-center fw-bold display-4 bg-danger text-light">CLASSES</h2>
+            <h2 class="py-3 my-3 text-center fw-bold display-4 bg-danger text-light">CLASSES</h2>
             <div class="container py-5">
                 <div class="row justify-content-evenly text-center">
                     <div class="col-md-4 col-lg-4 col-sm-6">
