--- a/Brandon/index.html
+++ b/Brandon/index.html
@@ -328,7 +328,7 @@
 
     <!--Contact Part Start-->
   <section class="contact position-relative contact pb-4">
-    <h2 class="py-3 my-4 text-center fw-bold display-4 bg-danger text-white text-uppercase">contact us</h2>
+    <h2 class="py-3 my-4 text-center fw-bold display-4 text-uppercase">contact us</h2>
    <img src="assets/images/clip.png" alt="clip" class="position-absolute clip">
    <div class="container py-5">
          <div class="row justify-content-center align-content-center">
