--- a/Brandon/assets/pages/contact.html
+++ b/Brandon/assets/pages/contact.html
@@ -14,7 +14,7 @@
 <body>
 <section>
             <!-- logo and Login Start -->
-            <div class="container py-4">
+            <div class="container pb-4">
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-3 col-sm-3">
                         <img src="../images/logo.png" alt="logo" class="img-fluid">
