--- a/Brandon/index.html
+++ b/Brandon/index.html
@@ -39,7 +39,7 @@
         <div class="offcanvas-body">
             <nav class="navbar">
                 <ul class="navbar-nav ms-3">
-                    <li class="nav-item"><a href="https://www.free-css.com/" class="nav-link">
+                    <li class="nav-item"><a href="https://www.free-css.com/" class="nav-link active">
                         Home
                     </a></li>
                     <li class="nav-item"><a href="assets/pages/about.html" class="nav-link">
@@ -384,7 +384,7 @@
                 </div>
             </div>
             <p class="text-center py-3">ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitationipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-            <p class="text-center py-3 pb-5 my-5">© 2045 All Rights Reserved. Design by HTML Design</p>
+            <p class="text-center py-3 pb-5 my-5">© 2045 All Rights Reserved. Design by <a href="https://www.free-css.com/" class="text-decoration-none text-dark">RaihanTeam</a>.</p>
         </div>
     </footer>
     <!-- Footer End -->
