--- a/Brandon/assets/pages/about.html
+++ b/Brandon/assets/pages/about.html
@@ -42,7 +42,7 @@
                     <li class="nav-item"><a href="https://www.free-css.com/" class="nav-link">
                         Home
                     </a></li>
-                    <li class="nav-item"><a href="../pages/about.html" class="nav-link">
+                    <li class="nav-item"><a href="../pages/about.html" class="nav-link active">
                         About
                     </a></li>
                     <li class="nav-item"><a href="../pages/classes.html" class="nav-link">
