--- a/Brandon/assets/pages/classes.html
+++ b/Brandon/assets/pages/classes.html
@@ -45,7 +45,7 @@
                     <li class="nav-item"><a href="../pages/about.html" class="nav-link">
                         About
                     </a></li>
-                    <li class="nav-item"><a href="../pages/classes.html" class="nav-link">
+                    <li class="nav-item"><a href="../pages/classes.html" class="nav-link active">
                         Classes
                     </a></li>
                     <li class="nav-item"><a href="../pages/testimonial.html" class="nav-link">
