--- a/Brandon/assets/pages/contact.html
+++ b/Brandon/assets/pages/contact.html
@@ -51,7 +51,7 @@
                         <li class="nav-item"><a href="../pages/testimonial.html" class="nav-link">
                             Testimonial
                         </a></li>
-                        <li class="nav-item"><a href="../pages/contact.html" class="nav-link">
+                        <li class="nav-item"><a href="../pages/contact.html" class="nav-link active">
                             Contact
                         </a></li>
                     </ul>
