--- a/Brandon/assets/pages/testimonials.html
+++ b/Brandon/assets/pages/testimonials.html
@@ -48,7 +48,7 @@
                         <li class="nav-item"><a href="../pages/classes.html" class="nav-link">
                             Classes
                         </a></li>
-                        <li class="nav-item"><a href="../pages/testimonial.html" class="nav-link">
+                        <li class="nav-item"><a href="../pages/testimonial.html" class="nav-link active">
                             Testimonial
                         </a></li>
                         <li class="nav-item"><a href="../pages/contact.html" class="nav-link">
