--- a/Brandon/index.html
+++ b/Brandon/index.html
@@ -12,6 +12,34 @@
 	<link rel="stylesheet" href="assets/css/style.css">   
 </head>
 <body>
+            <!-- Offcanvas Start -->
+            <div class="offcanvas offcanvas-start border-0 text-light position-fixed" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasBrandon" aria-labelledby="offcanvasBrandon">
+                <div class="offcanvas-header ms-auto py-0">
+                  <a class="btn text-light fs-4" data-bs-dismiss="offcanvas" aria-label="Close">X</a>
+                </div>
+                <div class="offcanvas-body">
+                    <nav class="navbar">
+                        <ul class="navbar-nav ms-3">
+                            <li class="nav-item"><a href="https://www.free-css.com/" class="nav-link active">
+                                Home
+                            </a></li>
+                            <li class="nav-item"><a href="assets/pages/about.html" class="nav-link">
+                                About
+                            </a></li>
+                            <li class="nav-item"><a href="assets/pages/classes.html" class="nav-link">
+                                Classes
+                            </a></li>
+                            <li class="nav-item"><a href="assets/pages/testimonials.html" class="nav-link">
+                                Testimonials
+                            </a></li>
+                            <li class="nav-item"><a href="assets/pages/contact.html" class="nav-link">
+                                Contact
+                            </a></li>
+                        </ul>
+                    </nav>
+                </div>
+              </div>
+            <!-- Offcanvas End -->
     <header class="position-relative">
         <!-- logo and Login Start -->
         <div class="container py-4">
@@ -31,34 +59,7 @@
         </div>
         <!-- logo and Login End -->
 
-        <!-- Offcanvas Start  -->
-    <div class="offcanvas offcanvas-start border-0 text-light" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasBrandon" aria-labelledby="offcanvasBrandon">
-        <div class="offcanvas-header ms-auto py-0">
-          <a class="btn text-light fs-4" data-bs-dismiss="offcanvas" aria-label="Close">X</a>
-        </div>
-        <div class="offcanvas-body">
-            <nav class="navbar">
-                <ul class="navbar-nav ms-3">
-                    <li class="nav-item"><a href="https://www.free-css.com/" class="nav-link active">
-                        Home
-                    </a></li>
-                    <li class="nav-item"><a href="assets/pages/about.html" class="nav-link">
-                        About
-                    </a></li>
-                    <li class="nav-item"><a href="assets/pages/classes.html" class="nav-link">
-                        Classes
-                    </a></li>
-                    <li class="nav-item"><a href="assets/pages/testimonials.html" class="nav-link">
-                        Testimonials
-                    </a></li>
-                    <li class="nav-item"><a href="assets/pages/contact.html" class="nav-link">
-                        Contact
-                    </a></li>
-                </ul>
-            </nav>
-        </div>
-      </div>
-    <!-- Offcanvas End -->
+
 
 
 
